Docker: edited docker-compose.yml, added Dockerfile, minor fixes in tests
